Fixed horizontal scrolling from integration of components and imported boxicons

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,6 @@
   src: url(../../assets/fonts/coolvetica/coolvetica\ rg.otf);
 }
 
-
 .Footer {
     justify-content: center;
   }
@@ -23,9 +22,10 @@
     margin: 0px auto;
     padding-top: 50px;
   }
-  
+
   .LogoText {
     display: block;
+    font-size: 12px;
     font-size: 15px;
     margin-bottom: 25px;
     font-family: Coolvetica;
@@ -43,7 +43,7 @@
   }
 
   @media only screen and (max-width: 10000px) {
-  
+
     .MediaLinks a {
       padding: 15px;
     }
@@ -62,66 +62,8 @@
   }
 
   @media only screen and (max-width: 353px) {
-  
+
     .MediaLinks a box-icon {
       margin-right: 2px;
-    font-size: 12px;
-    margin-bottom: 50px;
-    }
-  }
-  
-  @media only screen and (max-width: 10000px) {
-    .MediaLinks {
-      display: block;
-      margin: auto;
-    }
-  
-    .MediaLinks a {
-      margin: 15px;
-    }
-  
-    .FooterContainer {
-      display: grid;
-      width: 75%;
-      grid-template-columns: 1fr;
-      margin-bottom: 25px;
-    }
-  }
-  
-  @media only screen and (max-width: 1200px) {
-    .FooterContainer {
-      display: grid;
-      width: 75%;
-      grid-template-columns: auto;
-      margin-bottom: 25px;
-      gap: 50px;
-    }
-
-
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .MediaLinks {
-      margin: auto;
-      flex-direction: row;
-      float: left;
-      margin: auto;
-    }
-  
-    .MediaLinks a {
-      margin: 10px;
-    }
-  }
-
-  @media only screen and (max-width: 472px) {
-    .MediaLinks {
-      display: block;
-      flex-direction: row;
-      float: left;
-      margin: auto;
-    }
-  
-    .MediaLinks a {
-      margin: 10px;
     }
   }
