--- a/src/components/SponsorShowcase/SponsorShowcase.css
+++ b/src/components/SponsorShowcase/SponsorShowcase.css
@@ -29,7 +29,7 @@
 .text{
   border-left: 5px solid black;
   padding-left: 2.25%;
-  width: 100%;
+  width: 80%;
   font-family: Rubik;
   font-size: 1.1vw;
 }
